Fix the uneven header height

--- a/webroot/static/styles/base.css
+++ b/webroot/static/styles/base.css
@@ -1137,9 +1137,6 @@ main {
 
 [itemtype$="Bug"] > header {
   box-sizing: padding-box;
-  border-width: .1rem 0;
-  border-style: solid;
-  border-color: var(--region-header-border-color);
   padding: 0 .8rem;
   height: 3rem;
   border-color: var(--region-header-border-color);
@@ -1518,9 +1515,6 @@ article[id$="preview-bug"] > header {
   position: absolute;
   left: 0;
   box-sizing: padding-box;
-  border-width: .1rem 0;
-  border-style: solid;
-  border-color: var(--region-header-border-color);
   padding: 0 .8rem;
   width: 100%;
   height: 3rem;
